[package]
name = "kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.18.2"
serde_json = "1.0.108"
tokio = { version = "1.25.0", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12.5" }
futures = "0.3.30"
interp = "0.1.0"
rand = "0.8.3"