[package]
name = "kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-openai = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15"
reqwest = { version = "0.12.5" }
interp = "0.1.0"
rand = "0.8.3"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
